methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  for (k<-1 to 4){
        ^