methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  var k=0
  for (k<-1 to 4){
    if (getCouleurSol()==Color.green){
    	avance()
  	} else {
    	gauche()
  		}
    
  }}